package github.com.classes.constants;

public interface Consts {
    int WIDTH_OF_FRAME = 1100;
    int HEIGHT_OF_FRAME = 700;
    String TABLE = "table_game";
    int KOEF_TIME = 1000;
    int START_FRAME_WIDTH = 600;
    int START_FRAME_HEIGHT = 500;
    int START_FRAME_X = 600;
    int START_FRAME_Y = 150;
    int ROWS = 4;
    int COLUMNS = 1;
    int DELAY = 10;
    int GAME_FRAME_X = 30;
    int GAME_FRAME_Y = 30;
    int INDEX_DIFF = 1;
    int GAME_END_WIDTH = 1280;
    int GAME_END_HEIGHT = 820;
    int GAME_END_X = 30;
    int GAME_END_Y = 30;
    int RESULTS_FRAME_WIDTH = 400;
    int RESULTS_FRAME_HEIGHT = 400;
    int RESULTS_FRAME_X = 30;
    int RESULTS_FRAME_Y = 30;
    int TWO_WIDTH_OF_FRAME = 2200;
    int MAX_V = 50;
    int MAX_TOP_COORDINATE = 40;
    int MAX_BOTTOM_COORDINATE = 410;
    int RECT_WIDTH = 200;
    int RECT_HEIGHT = 85;
    int RECT_ENEMY_WIDTH = 240;
    int RECT_ENEMY_HEIGHT = 105;
    int KOEF_SPEED = 5;
    int MIN_SPEED = 5;
    int SECOND_LAYER_START = 1100;
    int ENEMY_START_X = 1100;
    int ENEMY_MIN_Y = 40;
    int ENEMY_MAX_Y = 410;
    int ENEMY_MIN_V = 5;
    int ENEMY_MAX_V = 40;
}
